--- a/app/src/main/res/layout/activity_change_auth_info_tutor.xml
+++ b/app/src/main/res/layout/activity_change_auth_info_tutor.xml
@@ -70,6 +70,7 @@
                 android:layout_height="40dp"
                 android:layout_margin="5dp"
                 android:textColor="#fff"
+                android:layout_marginTop="10dp"
                 android:gravity="bottom"
                 android:text="New Email"
                 android:textSize="20sp"
@@ -113,8 +114,9 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@drawable/buttonstyle"
-                android:text="Change Email" />
+                android:background="@drawable/custom1"
+                android:text="Change Email"
+                android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
             <TextView
                 android:id="@+id/spass"
@@ -165,11 +167,12 @@
                 android:id="@+id/changePass"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="50dp"
-                android:background="@drawable/buttonstyle"
-                android:text="Change Password" />
+                android:background="@drawable/custom1"
+                android:text="Change Password"
+                android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
 
 
