--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -10,24 +10,16 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/pagename"
-            android:textColor="#ffff"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="Edit Profile"
-            android:textSize="30dp"
-            />
+
         <TextView
             android:id="@+id/nameview"
-            android:textColor="#ffff"
-            android:layout_below="@id/pagename"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
-            android:layout_marginTop="10dp"
-            android:text="Name"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:text="Name"
+            android:textColor="#ffff"
+            android:textSize="18sp" />
         <EditText
             android:id="@+id/name"
             android:layout_width="wrap_content"
@@ -36,21 +28,25 @@
             android:hint=""
             android:layout_below="@id/nameview"
             android:textColor="#ffff"
+            android:layout_marginLeft="10dp"
             />
+
         <TextView
             android:id="@+id/emailview"
-            android:textColor="#ffff"
-            android:layout_below="@id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
+            android:layout_below="@id/name"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:text="Email"/>
+            android:text="Email"
+            android:textColor="#ffff"
+            android:textSize="18sp" />
         <TextView
             android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
+            android:layout_marginLeft="10dp"
             android:hint=""
             android:layout_below="@id/emailview"
             android:textColor="#ffff"/>
@@ -92,60 +88,65 @@
             android:src="@drawable/addprofilepic"
             android:layout_alignRight="@id/name"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/pagename"
             android:adjustViewBounds="true"
             android:cropToPadding="true"
             android:scaleType="centerCrop"/>
+
         <TextView
             android:id="@+id/qfview"
-            android:textColor="#ffff"
-            android:layout_below="@id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
+            android:layout_below="@id/email"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:text="Qualification"/>
+            android:text="Qualification"
+            android:textColor="#ffff"
+            android:textSize="18sp" />
         <EditText
             android:id="@+id/qualification"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:layout_marginLeft="10dp"
             android:inputType="textPersonName"
             android:hint=""
             android:layout_below="@id/qfview"
             android:textColor="#ffff"/>
+
         <TextView
             android:id="@+id/cityview"
-            android:textColor="#ffff"
-            android:layout_below="@id/qualification"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3dp"
+            android:layout_below="@id/qualification"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:text="City (where you are available as a tutor)"/>
+            android:text="City (where you are available as a tutor)"
+            android:textColor="#ffff"
+            android:textSize="18sp" />
         <EditText
             android:id="@+id/city"
             android:layout_below="@id/cityview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:layout_marginLeft="10dp"
             android:inputType="textPersonName"
             android:hint=""
             android:textColor="#ffff"/>
 
         <Button
             android:id="@+id/save"
-            android:textColor="#ffff"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/city"
+            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="4dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="4dp"
-            android:layout_alignParentBottom="true"
+            android:background="@drawable/custom1"
             android:text="Save Changes"
-            android:background="@drawable/button_border"/>
+            android:textColor="#ffff" />
         <!--Button
             android:id="@+id/backbut"
             android:layout_width="match_parent"
