--- a/app/src/main/res/layout/content_list_of_course_tutor.xml
+++ b/app/src/main/res/layout/content_list_of_course_tutor.xml
@@ -30,13 +30,14 @@
 
     <Button
         android:id="@+id/newcourse"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
         android:layout_marginBottom="10dp"
+        android:background="@drawable/custom1"
+        android:layout_centerHorizontal="true"
         android:text="+ Propose a new course"
-        android:background="@drawable/buttonstyle"/>
+        android:textColor="@color/common_google_signin_btn_text_dark_pressed" />
 
     <TextView
         android:layout_width="wrap_content"
